Added info abt myself

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Astral by HTML5 UP</title>
+		<title>Thanh Nguyen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,9 +20,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
+						<a href="#projects" class="icon solid fa-folder"><span>Projects</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a>
+						<a href="https://github.com/tawnthanh" class="icon brands fa-github"><span>Github</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -31,17 +31,23 @@
 						<!-- Me -->
 							<article id="home" class="panel intro">
 								<header>
-									<h1>Jane Doe</h1>
-									<p>Senior Astral Projectionist</p>
+									<h1>Thanh Nguyen</h1>
+									<p>Full Stack Software Engineer</p>
+									<div class="info">
+										Hi there, you can call me Thanh, it's pronounced like "Dawn" but with a "T".
+										I'm a software engineer who enjoys working on projects that will improve people's quality of life.
+										When it's not a project, then debugging will suffice because I'm all about problem-solving.
+										If you found me during my downtime, I must be eating spicy hotpot or playing some puzzle game on my phone.
+									</div>
 								</header>
-								<a href="#work" class="jumplink pic">
+								<a href="#projects" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
+									<img src="images/selfie.png" alt="" />
 								</a>
 							</article>
 
 						<!-- Work -->
-							<article id="work" class="panel">
+							<article id="projects" class="panel">
 								<header>
 									<h2>Work</h2>
 								</header>
