--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 						<a href="#projects" class="icon solid fa-folder"><span>Projects</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
 						<a href="https://github.com/tawnthanh" class="icon brands fa-github"><span>Github</span></a>
+						<a href="https://www.linkedin.com/in/thanh-nguyen-15a50437/" class="icon brands fa-linkedin"><span>LinkedIn</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -131,7 +132,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Thanh Nguyen</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 
