--- a/index.html
+++ b/index.html
@@ -53,47 +53,36 @@
 									<h2>Work</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									Check out my projects below!
 								</p>
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											<img src="images/LazyDresser.PNG" alt="" class="image fit">
+											<div class="image-links">
+												<p>Wardrobe app that helps you find an outfit while you're still in bed.</p>
+												<a href="https://github.com/tawnthanh/lazy-dresser" target="_blank"><i class="fab fa-github"></i></a>
+												<a href="https://lazy-dresser.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+											</div>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+											<img src="images/ReturnTrue.PNG" alt="" class="image fit">
+											<div class="image-links">
+												<p>Wardrobe app that helps you find an outfit while you're still in bed.</p>
+												<a href="https://github.com/tawnthanh/lazy-dresser" target="_blank"><i class="fab fa-github"></i></a>
+												<a href="https://lazy-dresser.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+											</div>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+											<img src="images/NightOwl.PNG" alt="" class="image fit">
+											<div class="image-links">
+												<p>Wardrobe app that helps you find an outfit while you're still in bed.</p>
+												<a href="https://github.com/tawnthanh/lazy-dresser" target="_blank"><i class="fab fa-github"></i></a>
+												<a href="https://lazy-dresser.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+											</div>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
+											<img src="images/pic04.jpg" alt="" class="image fit">
 										</div>
 									</div>
 								</section>
