Added links and details

--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
 										<div class="col-4 col-6-medium col-12-small">
 											<img src="images/ReturnTrue.PNG" alt="" class="image fit">
 											<div class="image-links">
-												<p>Wardrobe app that helps you find an outfit while you're still in bed.</p>
-												<a href="https://github.com/tawnthanh/lazy-dresser" target="_blank"><i class="fab fa-github"></i></a>
-												<a href="https://lazy-dresser.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+												<p>An OkCupid clone to help web developers find their match.</p>
+												<a href="https://github.com/tawnthanh/return-true" target="_blank"><i class="fab fa-github"></i></a>
+												<a href="https://return-true.herokuapp.com" target="_blank"><i class="fas fa-external-link-alt"></i></a>
 											</div>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<img src="images/NightOwl.PNG" alt="" class="image fit">
 											<div class="image-links">
-												<p>Wardrobe app that helps you find an outfit while you're still in bed.</p>
-												<a href="https://github.com/tawnthanh/lazy-dresser" target="_blank"><i class="fab fa-github"></i></a>
-												<a href="https://lazy-dresser.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+												<p>A Tumblr clone for true crime/horror enthusiasts.</p>
+												<a href="https://github.com/tawnthanh/night-owl" target="_blank"><i class="fab fa-github"></i></a>
+												<a href="https://nightowl-app.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
 											</div>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
