Contact me now works

--- a/index.html
+++ b/index.html
@@ -50,15 +50,12 @@
 						<!-- Work -->
 							<article id="projects" class="panel">
 								<header>
-									<h2>Work</h2>
+									<h2>Projects</h2>
 								</header>
-								<p>
-									Check out my projects below!
-								</p>
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<img src="images/LazyDresser.PNG" alt="" class="image fit">
+											<img src="images/LazyDresser.PNG" alt="lazy-dresser" class="image fit">
 											<div class="image-links">
 												<p>Wardrobe app that helps you find an outfit while you're still in bed.</p>
 												<a href="https://github.com/tawnthanh/lazy-dresser" target="_blank"><i class="fab fa-github"></i></a>
@@ -66,7 +63,7 @@
 											</div>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<img src="images/ReturnTrue.PNG" alt="" class="image fit">
+											<img src="images/ReturnTrue.PNG" alt="return-true" class="image fit">
 											<div class="image-links">
 												<p>An OkCupid clone to help web developers find their match.</p>
 												<a href="https://github.com/tawnthanh/return-true" target="_blank"><i class="fab fa-github"></i></a>
@@ -74,7 +71,7 @@
 											</div>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<img src="images/NightOwl.PNG" alt="" class="image fit">
+											<img src="images/NightOwl.PNG" alt="night-owl" class="image fit">
 											<div class="image-links">
 												<p>A Tumblr clone for true crime/horror enthusiasts.</p>
 												<a href="https://github.com/tawnthanh/night-owl" target="_blank"><i class="fab fa-github"></i></a>
@@ -93,7 +90,7 @@
 								<header>
 									<h2>Contact Me</h2>
 								</header>
-								<form action="#" method="post">
+								<form action="https://formspree.io/f/xjvjbqyd" method="post">
 									<div>
 										<div class="row">
 											<div class="col-6 col-12-medium">
