Update hyperlinks & project descriptions

--- a/index.html
+++ b/index.html
@@ -57,25 +57,22 @@
 										<div class="col-4 col-6-medium col-12-small">
 											<img src="images/LazyDresser.PNG" alt="lazy-dresser" class="image fit">
 											<div class="image-links">
-												<p>Wardrobe app that helps you find an outfit while you're still in bed.</p>
+												<p>An app that allows the user to upload their entire clothing inventory and create outfits without making a mess in their closet.</p>
 												<a href="https://github.com/tawnthanh/lazy-dresser" target="_blank"><i class="fab fa-github"></i></a>
-												<a href="https://lazy-dresser.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
 											</div>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<img src="images/ReturnTrue.PNG" alt="return-true" class="image fit">
 											<div class="image-links">
-												<p>An OkCupid clone to help web developers find their match.</p>
+												<p>A social app where developers can create their own profile and look for other developers to work with. The website also includes a matching algorithm that will assist the user in finding their best match (based on OKCupid).</p>
 												<a href="https://github.com/tawnthanh/return-true" target="_blank"><i class="fab fa-github"></i></a>
-												<a href="https://return-true.herokuapp.com" target="_blank"><i class="fas fa-external-link-alt"></i></a>
 											</div>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<img src="images/NightOwl.PNG" alt="night-owl" class="image fit">
 											<div class="image-links">
-												<p>A Tumblr clone for true crime/horror enthusiasts.</p>
+												<p>A social app for  true crime and horror enthusiasts that allows users to make their own posts (text, video, audio, and photos) and like other user posts (based on Tumblr). </p>
 												<a href="https://github.com/tawnthanh/night-owl" target="_blank"><i class="fab fa-github"></i></a>
-												<a href="https://nightowl-app.herokuapp.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
 											</div>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
